--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     font-size: medium;
     font-weight: 700;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #ff6666;
+    background: linear-gradient(130deg, #ff6666,  #e60000);
     color: white;
     border-radius: 10px;
 }
@@ -20,3 +20,63 @@
   #hide1{
     display: none;
   }
+
+  .bg1st{
+    background: linear-gradient(130deg, #ff8080, #ffe6e6);
+    opacity: 0.9;
+}
+
+.bg1a{
+  background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('img/istockphoto-1224629431-612x612.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 20px;
+  height: 100%;
+  transition: 5s;
+  background-position: top right;
+  animation-name:animate;
+  animation-direction:alternate-reverse ;
+  animation-duration:30s;
+  animation-fill-mode:forwards ;
+  animation-iteration-count:infinite ;
+  animation-play-state:running ;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes animate{
+0%{
+  background:linear-gradient(rgba(1, 3, 0, 0.5), rgba(0, 0, 0, 0.7)), url('img/istockphoto-1224629431-612x612.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: 2s;
+}
+20%{
+  background:linear-gradient(rgba(1, 3, 0, 0.5), rgba(0, 0, 0, 0.7)), url('img/login.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: 2s;
+}
+40%{
+  background:linear-gradient(rgba(1, 3, 0, 0.5), rgba(0, 0, 0, 0.7)), url('img/rimg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: 2s;
+}
+60%{
+  background:linear-gradient(rgba(1, 3, 0, 0.5), rgba(0, 0, 0, 0.7)), url('img/rimg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: 2s;
+}
+80%{
+  background:linear-gradient(rgba(1, 3, 0, 0.5), rgba(0, 0, 0, 0.7)), url('img/login.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+100%{
+  background:linear-gradient(rgba(1, 3, 0, 0.5), rgba(0, 0, 0, 0.7)), url('img/istockphoto-1224629431-612x612.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: 2s;
+}
+}
